# serializer version: 1
# name: TestDashboardView.test_dashboard
  '''
  <form action="/search/employers/results" method="get" role="search">
      <div class="c-search__bar__grid">
          <div class="input-group input-group-xl input-group-search flex-nowrap align-items-center">
              <label class="input-group-text mb-0" for="id_city">
                  <span class="visually-hidden">
                      Ville
                  </span>
                  <i aria-hidden="true" class="ri-map-pin-line fw-medium ri-xltext-disabled">
                  </i>
              </label>
              <select class="form-control django-select2" data-ajax--delay="250" data-ajax--url="/autocomplete/cities?slug=" data-allow-clear="false" data-minimum-input-length="1" data-placeholder="Rechercher un emploi inclusif autour de…" data-theme="bootstrap-5" id="id_city" lang="fr" name="city" required="">
              </select>
          </div>
          <div class="input-group input-group-xl">
              <button aria-label="Rechercher un emploi inclusif" class="btn btn-block btn-ico btn-link">
                  <i aria-hidden="true" class="ri-search-line ri-xl fw-bold">
                  </i>
                  <span class="me-1">
                      Rechercher
                  </span>
              </button>
          </div>
      </div>
  </form>
  
  '''
# ---
# name: TestDashboardView.test_dashboard_for_job_seeker
  '''
  <div class="c-title__main">
      <h1>
          Jane DOE
      </h1>
      <p>
          Copier mon ID candidat
          <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="7614fc4b-aef9-4694-ab17-12324300180a" type="button">
              <i aria-hidden="true" class="ri-file-copy-line fw-normal">
              </i>
              <span class="visually-hidden">
                  Copier
              </span>
          </button>
      </p>
  </div>
  
  '''
# ---
# name: TestDashboardView.test_dashboard_siae_evaluation_campaign_notifications[view queries]
  dict({
    'num_queries': 21,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 EXISTS
            (SELECT %s AS "a"
             FROM "companies_siaeconvention" U0
             WHERE (U0."deactivated_at" >= %s
                    AND U0."id" = ("companies_company"."convention_id"))
             LIMIT 1) AS "has_convention_in_grace_period",
                 "companies_siaeconvention"."id",
                 "companies_siaeconvention"."kind",
                 "companies_siaeconvention"."siret_signature",
                 "companies_siaeconvention"."is_active",
                 "companies_siaeconvention"."deactivated_at",
                 "companies_siaeconvention"."reactivated_by_id",
                 "companies_siaeconvention"."reactivated_at",
                 "companies_siaeconvention"."asp_id",
                 "companies_siaeconvention"."created_at",
                 "companies_siaeconvention"."updated_at"
          FROM "companies_company"
          INNER JOIN "companies_companymembership" ON ("companies_company"."id" = "companies_companymembership"."company_id")
          LEFT OUTER JOIN "companies_siaeconvention" ON ("companies_company"."convention_id" = "companies_siaeconvention"."id")
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND "companies_companymembership"."user_id" = %s
                 AND "companies_company"."id" IN (%s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."deactivated_at" >= %s
                                AND U0."id" = ("companies_company"."convention_id"))
                         LIMIT 1)))
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "search_savedsearch"."id",
                 "search_savedsearch"."user_id",
                 "search_savedsearch"."name",
                 "search_savedsearch"."query_params",
                 "search_savedsearch"."created_at"
          FROM "search_savedsearch"
          WHERE "search_savedsearch"."user_id" = %s
          ORDER BY "search_savedsearch"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          '_employer_dashboard_context[www/dashboard/views.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "job_applications_jobapplication"."state" AS "state"
          FROM "job_applications_jobapplication"
          WHERE ("job_applications_jobapplication"."to_company_id" = %s
                 AND "job_applications_jobapplication"."archived_at" IS NULL)
          ORDER BY "job_applications_jobapplication"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'Company.has_admin[common_apps/organizations/models.py]',
          'Company.convention_can_be_accessed_by[companies/models.py]',
          '_employer_dashboard_context[www/dashboard/views.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "users_user"
          INNER JOIN "companies_companymembership" ON ("users_user"."id" = "companies_companymembership"."user_id")
          WHERE ("companies_companymembership"."id" IN
                   (SELECT U0."id"
                    FROM "companies_companymembership" U0
                    INNER JOIN "users_user" U1 ON (U0."user_id" = U1."id")
                    WHERE (U1."is_active"
                           AND U0."is_active"
                           AND U0."company_id" = %s
                           AND U0."is_admin"
                           AND U1."is_active"))
                 AND "users_user"."id" = %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          '_employer_dashboard_context[www/dashboard/views.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "employee_record_employeerecord"
          INNER JOIN "job_applications_jobapplication" ON ("employee_record_employeerecord"."job_application_id" = "job_applications_jobapplication"."id")
          WHERE ("job_applications_jobapplication"."to_company_id" = %s
                 AND "employee_record_employeerecord"."status" = %s)
        ''',
      }),
      dict({
        'origin': list([
          'Company.get_active_suspension_dates[companies/models.py]',
          'Company.get_active_suspension_text_with_dates[companies/models.py]',
          '_employer_dashboard_context[www/dashboard/views.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_sanctions"."suspension_dates" AS "sanctions__suspension_dates"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_sanctions" ON ("siae_evaluations_evaluatedsiae"."id" = "siae_evaluations_sanctions"."evaluated_siae_id")
          WHERE ("siae_evaluations_evaluatedsiae"."siae_id" = %s
                 AND "siae_evaluations_sanctions"."suspension_dates" @> %s::date)
          ORDER BY UPPER("siae_evaluations_sanctions"."suspension_dates") DESC NULLS FIRST
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Company.has_job_descriptions_not_updated_recently[companies/models.py]',
          'IfNode[layout/base.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "companies_jobdescription"
          WHERE ("companies_jobdescription"."company_id" = %s
                 AND "companies_jobdescription"."is_active"
                 AND "companies_jobdescription"."last_employer_update_at" < %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Company.has_admin[common_apps/organizations/models.py]',
          'Company.convention_can_be_accessed_by[companies/models.py]',
          'nav[utils/templatetags/nav.py]',
          'InclusionNode[layout/_header_authenticated.html]',
          'IncludeNode[layout/base.html]',
          'IfNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "users_user"
          INNER JOIN "companies_companymembership" ON ("users_user"."id" = "companies_companymembership"."user_id")
          WHERE ("companies_companymembership"."id" IN
                   (SELECT U0."id"
                    FROM "companies_companymembership" U0
                    INNER JOIN "users_user" U1 ON (U0."user_id" = U1."id")
                    WHERE (U1."is_active"
                           AND U0."is_active"
                           AND U0."company_id" = %s
                           AND U0."is_admin"
                           AND U1."is_active"))
                 AND "users_user"."id" = %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "jobs_appellation"
          INNER JOIN "companies_jobdescription" ON ("jobs_appellation"."code" = "companies_jobdescription"."appellation_id")
          WHERE "companies_jobdescription"."company_id" = %s
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedsiae"."id",
                 "siae_evaluations_evaluatedsiae"."evaluation_campaign_id",
                 "siae_evaluations_evaluatedsiae"."siae_id",
                 "siae_evaluations_evaluatedsiae"."reviewed_at",
                 "siae_evaluations_evaluatedsiae"."final_reviewed_at",
                 "siae_evaluations_evaluatedsiae"."submission_freezed_at",
                 "siae_evaluations_evaluatedsiae"."notified_at",
                 "siae_evaluations_evaluatedsiae"."notification_reason",
                 "siae_evaluations_evaluatedsiae"."notification_text",
                 "siae_evaluations_evaluatedsiae"."reminder_sent_at",
                 "siae_evaluations_evaluatedsiae"."final_state",
                 "siae_evaluations_evaluatedsiae"."archive_accepted_job_applications_nb",
                 "siae_evaluations_evaluationcampaign"."id",
                 "siae_evaluations_evaluationcampaign"."name",
                 "siae_evaluations_evaluationcampaign"."created_at",
                 "siae_evaluations_evaluationcampaign"."percent_set_at",
                 "siae_evaluations_evaluationcampaign"."evaluations_asked_at",
                 "siae_evaluations_evaluationcampaign"."ended_at",
                 "siae_evaluations_evaluationcampaign"."submission_freeze_notified_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_start_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_end_at",
                 "siae_evaluations_evaluationcampaign"."institution_id",
                 "siae_evaluations_evaluationcampaign"."chosen_percent",
                 "siae_evaluations_evaluationcampaign"."calendar_id"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_evaluationcampaign" ON ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" = "siae_evaluations_evaluationcampaign"."id")
          WHERE ("siae_evaluations_evaluatedsiae"."siae_id" = %s
                 AND NOT ("siae_evaluations_evaluationcampaign"."evaluations_asked_at" IS NULL)
                 AND "siae_evaluations_evaluationcampaign"."ended_at" IS NULL
                 AND "siae_evaluations_evaluatedsiae"."final_reviewed_at" IS NULL)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedjobapplication"."id",
                 "siae_evaluations_evaluatedjobapplication"."job_application_id",
                 "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id",
                 "siae_evaluations_evaluatedjobapplication"."labor_inspector_explanation"
          FROM "siae_evaluations_evaluatedjobapplication"
          WHERE "siae_evaluations_evaluatedjobapplication"."evaluated_siae_id" IN (%s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedadministrativecriteria"."id",
                 "siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."proof_id",
                 "siae_evaluations_evaluatedadministrativecriteria"."uploaded_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."submitted_at",
                 "siae_evaluations_evaluatedadministrativecriteria"."review_state",
                 "siae_evaluations_evaluatedadministrativecriteria"."criteria_certified"
          FROM "siae_evaluations_evaluatedadministrativecriteria"
          INNER JOIN "eligibility_administrativecriteria" ON ("siae_evaluations_evaluatedadministrativecriteria"."administrative_criteria_id" = "eligibility_administrativecriteria"."id")
          WHERE "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" IN (%s,
                                                                                                      %s)
          ORDER BY "siae_evaluations_evaluatedadministrativecriteria"."evaluated_job_application_id" ASC,
                   "eligibility_administrativecriteria"."level" ASC,
                   "eligibility_administrativecriteria"."ui_rank" ASC
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[dashboard/includes/employer_evaluation_campaigns_card.html]',
          'IncludeNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "siae_evaluations_evaluatedsiae"."id",
                 "siae_evaluations_evaluatedsiae"."evaluation_campaign_id",
                 "siae_evaluations_evaluatedsiae"."siae_id",
                 "siae_evaluations_evaluatedsiae"."reviewed_at",
                 "siae_evaluations_evaluatedsiae"."final_reviewed_at",
                 "siae_evaluations_evaluatedsiae"."submission_freezed_at",
                 "siae_evaluations_evaluatedsiae"."notified_at",
                 "siae_evaluations_evaluatedsiae"."notification_reason",
                 "siae_evaluations_evaluatedsiae"."notification_text",
                 "siae_evaluations_evaluatedsiae"."reminder_sent_at",
                 "siae_evaluations_evaluatedsiae"."final_state",
                 "siae_evaluations_evaluatedsiae"."archive_accepted_job_applications_nb",
                 "siae_evaluations_evaluationcampaign"."id",
                 "siae_evaluations_evaluationcampaign"."name",
                 "siae_evaluations_evaluationcampaign"."created_at",
                 "siae_evaluations_evaluationcampaign"."percent_set_at",
                 "siae_evaluations_evaluationcampaign"."evaluations_asked_at",
                 "siae_evaluations_evaluationcampaign"."ended_at",
                 "siae_evaluations_evaluationcampaign"."submission_freeze_notified_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_start_at",
                 "siae_evaluations_evaluationcampaign"."evaluated_period_end_at",
                 "siae_evaluations_evaluationcampaign"."institution_id",
                 "siae_evaluations_evaluationcampaign"."chosen_percent",
                 "siae_evaluations_evaluationcampaign"."calendar_id"
          FROM "siae_evaluations_evaluatedsiae"
          INNER JOIN "siae_evaluations_evaluationcampaign" ON ("siae_evaluations_evaluatedsiae"."evaluation_campaign_id" = "siae_evaluations_evaluationcampaign"."id")
          WHERE ("siae_evaluations_evaluatedsiae"."siae_id" = %s
                 AND NOT ("siae_evaluations_evaluatedsiae"."notified_at" IS NULL)
                 AND "siae_evaluations_evaluatedsiae"."evaluation_campaign_id" IN
                   (SELECT U0."id"
                    FROM "siae_evaluations_evaluationcampaign" U0
                    WHERE ((U0."ended_at" IS NULL
                            OR U0."ended_at" >= %s)
                           AND NOT (U0."evaluated_period_end_at" < %s))))
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDashboardView.test_jobseeker_approval_card[job seeker with approval queries]
  dict({
    'num_queries': 14,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "search_savedsearch"."id",
                 "search_savedsearch"."user_id",
                 "search_savedsearch"."name",
                 "search_savedsearch"."query_params",
                 "search_savedsearch"."created_at"
          FROM "search_savedsearch"
          WHERE "search_savedsearch"."user_id" = %s
          ORDER BY "search_savedsearch"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'EligibilityDiagnosisQuerySet.first[<site-packages>/django/db/models/query.py]',
          'EligibilityDiagnosisManagerFromEligibilityDiagnosisQuerySet.last_for_job_seeker[eligibility/models/iae.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "eligibility_eligibilitydiagnosis"."id",
                 "eligibility_eligibilitydiagnosis"."author_id",
                 "eligibility_eligibilitydiagnosis"."author_kind",
                 "eligibility_eligibilitydiagnosis"."author_prescriber_organization_id",
                 "eligibility_eligibilitydiagnosis"."created_at",
                 "eligibility_eligibilitydiagnosis"."updated_at",
                 "eligibility_eligibilitydiagnosis"."expires_at",
                 "eligibility_eligibilitydiagnosis"."job_seeker_id",
                 "eligibility_eligibilitydiagnosis"."author_siae_id",
                 EXISTS
            (SELECT %s AS "a"
             FROM "approvals_approval" U0
             WHERE U0."eligibility_diagnosis_id" = ("eligibility_eligibilitydiagnosis"."id")
             LIMIT 1) AS "with_approval",
                 CASE
                     WHEN "eligibility_eligibilitydiagnosis"."author_kind" = %s THEN %s
                     ELSE %s
                 END AS "from_prescriber",
                 T3."id",
                 T3."password",
                 T3."last_login",
                 T3."is_superuser",
                 T3."username",
                 T3."first_name",
                 T3."last_name",
                 T3."is_staff",
                 T3."is_active",
                 T3."date_joined",
                 T3."address_line_1",
                 T3."address_line_2",
                 T3."post_code",
                 T3."city",
                 T3."department",
                 T3."coords",
                 T3."geocoding_score",
                 T3."geocoding_updated_at",
                 T3."ban_api_resolved_address",
                 T3."insee_city_id",
                 T3."title",
                 T3."full_name_search_vector",
                 T3."email",
                 T3."phone",
                 T3."kind",
                 T3."identity_provider",
                 T3."has_completed_welcoming_tour",
                 T3."created_by_id",
                 T3."external_data_source_history",
                 T3."last_checked_at",
                 T3."public_id",
                 T3."address_filled_at",
                 T3."first_login",
                 T3."upcoming_deletion_notified_at",
                 T3."allow_next_sso_sub_update",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized",
                 "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update",
                 "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 "companies_company"."fields_history"
          FROM "eligibility_eligibilitydiagnosis"
          INNER JOIN "users_user" ON ("eligibility_eligibilitydiagnosis"."job_seeker_id" = "users_user"."id")
          INNER JOIN "users_user" T3 ON ("eligibility_eligibilitydiagnosis"."author_id" = T3."id")
          LEFT OUTER JOIN "prescribers_prescriberorganization" ON ("eligibility_eligibilitydiagnosis"."author_prescriber_organization_id" = "prescribers_prescriberorganization"."id")
          LEFT OUTER JOIN "companies_company" ON ("eligibility_eligibilitydiagnosis"."author_siae_id" = "companies_company"."id")
          WHERE ("eligibility_eligibilitydiagnosis"."job_seeker_id" = %s
                 AND (EXISTS
                        (SELECT %s AS "a"
                         FROM "approvals_approval" U0
                         WHERE U0."eligibility_diagnosis_id" = ("eligibility_eligibilitydiagnosis"."id")
                         LIMIT 1)
                      OR "eligibility_eligibilitydiagnosis"."author_kind" = %s))
          ORDER BY 11 DESC,
                   "eligibility_eligibilitydiagnosis"."created_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'EligibilityDiagnosisQuerySet.first[<site-packages>/django/db/models/query.py]',
          'EligibilityDiagnosisManagerFromEligibilityDiagnosisQuerySet.last_for_job_seeker[eligibility/models/iae.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "approvals_approval"."id",
                 "approvals_approval"."start_at",
                 "approvals_approval"."end_at",
                 "approvals_approval"."created_at",
                 "approvals_approval"."number",
                 "approvals_approval"."pe_notification_status",
                 "approvals_approval"."pe_notification_time",
                 "approvals_approval"."pe_notification_endpoint",
                 "approvals_approval"."pe_notification_exit_code",
                 "approvals_approval"."user_id",
                 "approvals_approval"."created_by_id",
                 "approvals_approval"."origin",
                 "approvals_approval"."eligibility_diagnosis_id",
                 "approvals_approval"."updated_at",
                 "approvals_approval"."origin_siae_siret",
                 "approvals_approval"."origin_siae_kind",
                 "approvals_approval"."origin_sender_kind",
                 "approvals_approval"."origin_prescriber_organization_kind",
                 "approvals_approval"."public_id"
          FROM "approvals_approval"
          WHERE "approvals_approval"."eligibility_diagnosis_id" IN (%s)
          ORDER BY "approvals_approval"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'EligibilityDiagnosisQuerySet.first[<site-packages>/django/db/models/query.py]',
          'EligibilityDiagnosisManagerFromEligibilityDiagnosisQuerySet.last_for_job_seeker[eligibility/models/iae.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "eligibility_selectedadministrativecriteria"."id",
                 "eligibility_selectedadministrativecriteria"."certified_at",
                 "eligibility_selectedadministrativecriteria"."certification_period",
                 "eligibility_selectedadministrativecriteria"."data_returned_by_api",
                 "eligibility_selectedadministrativecriteria"."last_certification_attempt_at",
                 "eligibility_selectedadministrativecriteria"."created_at",
                 "eligibility_selectedadministrativecriteria"."eligibility_diagnosis_id",
                 "eligibility_selectedadministrativecriteria"."administrative_criteria_id"
          FROM "eligibility_selectedadministrativecriteria"
          INNER JOIN "eligibility_administrativecriteria" ON ("eligibility_selectedadministrativecriteria"."administrative_criteria_id" = "eligibility_administrativecriteria"."id")
          WHERE "eligibility_selectedadministrativecriteria"."eligibility_diagnosis_id" IN (%s)
          ORDER BY "eligibility_administrativecriteria"."level" ASC,
                   "eligibility_administrativecriteria"."ui_rank" ASC
        ''',
      }),
      dict({
        'origin': list([
          'GEIQEligibilityDiagnosisQuerySet.first[<site-packages>/django/db/models/query.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "eligibility_geiqeligibilitydiagnosis"."id",
                 "eligibility_geiqeligibilitydiagnosis"."author_id",
                 "eligibility_geiqeligibilitydiagnosis"."author_kind",
                 "eligibility_geiqeligibilitydiagnosis"."author_prescriber_organization_id",
                 "eligibility_geiqeligibilitydiagnosis"."created_at",
                 "eligibility_geiqeligibilitydiagnosis"."updated_at",
                 "eligibility_geiqeligibilitydiagnosis"."expires_at",
                 "eligibility_geiqeligibilitydiagnosis"."job_seeker_id",
                 "eligibility_geiqeligibilitydiagnosis"."author_geiq_id",
                 T3."id",
                 T3."password",
                 T3."last_login",
                 T3."is_superuser",
                 T3."username",
                 T3."first_name",
                 T3."last_name",
                 T3."is_staff",
                 T3."is_active",
                 T3."date_joined",
                 T3."address_line_1",
                 T3."address_line_2",
                 T3."post_code",
                 T3."city",
                 T3."department",
                 T3."coords",
                 T3."geocoding_score",
                 T3."geocoding_updated_at",
                 T3."ban_api_resolved_address",
                 T3."insee_city_id",
                 T3."title",
                 T3."full_name_search_vector",
                 T3."email",
                 T3."phone",
                 T3."kind",
                 T3."identity_provider",
                 T3."has_completed_welcoming_tour",
                 T3."created_by_id",
                 T3."external_data_source_history",
                 T3."last_checked_at",
                 T3."public_id",
                 T3."address_filled_at",
                 T3."first_login",
                 T3."upcoming_deletion_notified_at",
                 T3."allow_next_sso_sub_update",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized",
                 "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 "companies_company"."fields_history"
          FROM "eligibility_geiqeligibilitydiagnosis"
          INNER JOIN "users_user" T3 ON ("eligibility_geiqeligibilitydiagnosis"."author_id" = T3."id")
          LEFT OUTER JOIN "prescribers_prescriberorganization" ON ("eligibility_geiqeligibilitydiagnosis"."author_prescriber_organization_id" = "prescribers_prescriberorganization"."id")
          LEFT OUTER JOIN "companies_company" ON ("eligibility_geiqeligibilitydiagnosis"."author_geiq_id" = "companies_company"."id")
          WHERE "eligibility_geiqeligibilitydiagnosis"."job_seeker_id" = %s
          ORDER BY "eligibility_geiqeligibilitydiagnosis"."created_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'User.latest_approval[users/models.py]',
          'IfNode[dashboard/includes/job_seeker_approval_card.html]',
          'IncludeNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "approvals_approval"."id",
                 "approvals_approval"."start_at",
                 "approvals_approval"."end_at",
                 "approvals_approval"."created_at",
                 "approvals_approval"."number",
                 "approvals_approval"."pe_notification_status",
                 "approvals_approval"."pe_notification_time",
                 "approvals_approval"."pe_notification_endpoint",
                 "approvals_approval"."pe_notification_exit_code",
                 "approvals_approval"."user_id",
                 "approvals_approval"."created_by_id",
                 "approvals_approval"."origin",
                 "approvals_approval"."eligibility_diagnosis_id",
                 "approvals_approval"."updated_at",
                 "approvals_approval"."origin_siae_siret",
                 "approvals_approval"."origin_siae_kind",
                 "approvals_approval"."origin_sender_kind",
                 "approvals_approval"."origin_prescriber_organization_kind",
                 "approvals_approval"."public_id"
          FROM "approvals_approval"
          WHERE "approvals_approval"."user_id" = %s
          ORDER BY "approvals_approval"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'Approval.is_suspended[approvals/models.py]',
          'Approval.state[approvals/models.py]',
          'IfNode[utils/templatetags/approval_box.html]',
          'InclusionNode[dashboard/includes/job_seeker_approval_card.html]',
          'IfNode[dashboard/includes/job_seeker_approval_card.html]',
          'IncludeNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "approvals_suspension"
          WHERE ("approvals_suspension"."approval_id" = %s
                 AND "approvals_suspension"."end_at" >= %s
                 AND "approvals_suspension"."start_at" <= %s)
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Approval.remainder[approvals/models.py]',
          'Approval.remainder_as_date[approvals/models.py]',
          'VariableNode[utils/templatetags/approval_box.html]',
          'IfNode[utils/templatetags/approval_box.html]',
          'IfNode[utils/templatetags/approval_box.html]',
          'InclusionNode[dashboard/includes/job_seeker_approval_card.html]',
          'IfNode[dashboard/includes/job_seeker_approval_card.html]',
          'IncludeNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "approvals_suspension"."id",
                 "approvals_suspension"."approval_id",
                 "approvals_suspension"."start_at",
                 "approvals_suspension"."end_at",
                 "approvals_suspension"."siae_id",
                 "approvals_suspension"."reason",
                 "approvals_suspension"."reason_explanation",
                 "approvals_suspension"."created_at",
                 "approvals_suspension"."created_by_id",
                 "approvals_suspension"."updated_at",
                 "approvals_suspension"."updated_by_id"
          FROM "approvals_suspension"
          WHERE "approvals_suspension"."approval_id" = %s
          ORDER BY "approvals_suspension"."start_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'QuerySet.first[<site-packages>/django/db/models/query.py]',
          'Approval.pending_prolongation_request[approvals/models.py]',
          'WithNode[utils/templatetags/approval_box.html]',
          'IfNode[utils/templatetags/approval_box.html]',
          'IfNode[utils/templatetags/approval_box.html]',
          'InclusionNode[dashboard/includes/job_seeker_approval_card.html]',
          'IfNode[dashboard/includes/job_seeker_approval_card.html]',
          'IncludeNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "approvals_prolongationrequest"."id",
                 "approvals_prolongationrequest"."approval_id",
                 "approvals_prolongationrequest"."start_at",
                 "approvals_prolongationrequest"."end_at",
                 "approvals_prolongationrequest"."reason",
                 "approvals_prolongationrequest"."reason_explanation",
                 "approvals_prolongationrequest"."declared_by_id",
                 "approvals_prolongationrequest"."declared_by_siae_id",
                 "approvals_prolongationrequest"."prescriber_organization_id",
                 "approvals_prolongationrequest"."created_at",
                 "approvals_prolongationrequest"."created_by_id",
                 "approvals_prolongationrequest"."updated_at",
                 "approvals_prolongationrequest"."updated_by_id",
                 "approvals_prolongationrequest"."report_file_id",
                 "approvals_prolongationrequest"."require_phone_interview",
                 "approvals_prolongationrequest"."contact_email",
                 "approvals_prolongationrequest"."contact_phone",
                 "approvals_prolongationrequest"."status",
                 "approvals_prolongationrequest"."assigned_to_id",
                 "approvals_prolongationrequest"."processed_at",
                 "approvals_prolongationrequest"."processed_by_id",
                 "approvals_prolongationrequest"."reminder_sent_at"
          FROM "approvals_prolongationrequest"
          WHERE ("approvals_prolongationrequest"."approval_id" = %s
                 AND "approvals_prolongationrequest"."status" = %s)
          ORDER BY "approvals_prolongationrequest"."created_at" DESC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'EligibilityDiagnosis.considered_to_expire_at[eligibility/models/iae.py]',
          'VariableNode[includes/valid_eligibility_diagnosis_and_criteria.html]',
          'IfNode[includes/valid_eligibility_diagnosis_and_criteria.html]',
          'IncludeNode[dashboard/includes/job_seeker_eligibility_card.html]',
          'IfNode[dashboard/includes/job_seeker_eligibility_card.html]',
          'IfNode[dashboard/includes/job_seeker_eligibility_card.html]',
          'IncludeNode[dashboard/dashboard.html]',
          'IfNode[dashboard/dashboard.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[dashboard/dashboard.html]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "approvals_approval"."id",
                 "approvals_approval"."start_at",
                 "approvals_approval"."end_at",
                 "approvals_approval"."created_at",
                 "approvals_approval"."number",
                 "approvals_approval"."pe_notification_status",
                 "approvals_approval"."pe_notification_time",
                 "approvals_approval"."pe_notification_endpoint",
                 "approvals_approval"."pe_notification_exit_code",
                 "approvals_approval"."user_id",
                 "approvals_approval"."created_by_id",
                 "approvals_approval"."origin",
                 "approvals_approval"."eligibility_diagnosis_id",
                 "approvals_approval"."updated_at",
                 "approvals_approval"."origin_siae_siret",
                 "approvals_approval"."origin_siae_kind",
                 "approvals_approval"."origin_sender_kind",
                 "approvals_approval"."origin_prescriber_organization_kind",
                 "approvals_approval"."public_id"
          FROM "approvals_approval"
          WHERE "approvals_approval"."eligibility_diagnosis_id" = %s
          ORDER BY "approvals_approval"."created_at" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDashboardView.test_jobseeker_eligibility_diagnoses[GEIQ eligibility block on job seeker dashboard]
  '''
  <div class="col-12 col-md-12 col-xxl-12 col-xxxl-12 mb-3 mb-md-5" id="geiq-eligibility-diagnosis">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">
                  Diagnostic public prioritaire GEIQ valide
              </span>
              <span class="badge badge-sm float-end rounded-pill bg-success-lighter text-success">
                  <i aria-hidden="true" class="ri-check-line">
                  </i>
                  Éligibilité GEIQ confirmée
              </span>
          </div>
          <div class="px-3 px-lg-4">
              <p>
                  Éligibilité GEIQ confirmée par
                  <b>
                      John DOE (ACME Inc.)
                  </b>
              </p>
              <ul class="list-data mb-3">
                  <li>
                      <small>
                          Critères administratifs
                      </small>
                      <ul>
                          <li>
                              Bénéficiaire du Revenu de Solidarité Active (RSA)
                          </li>
                          <li>
                              Résident en quartier prioritaire de la politique de la ville (QPV)
                          </li>
                          <li>
                              Sortant de l'Aide Sociale à l'Enfance (ASE)
                          </li>
                      </ul>
                  </li>
              </ul>
              <p>
                  <i>
                      Ce diagnostic expire le 19/11/2025.
                  </i>
              </p>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestDashboardView.test_jobseeker_eligibility_diagnoses[IAE eligibility block on job seeker dashboard]
  '''
  <div class="col-12 col-md-12 col-xxl-12 col-xxxl-6 mb-3 mb-md-5" id="iae-eligibility-diagnosis">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">
                  Diagnostic d’éligibilité à l’IAE
                      
                          valide
              </span>
              <span class="badge badge-sm float-end rounded-pill bg-success-lighter text-success">
                  <i aria-hidden="true" class="ri-check-line">
                  </i>
                  Éligible à l’IAE
              </span>
          </div>
          <div class="px-3 px-lg-4">
              <div class="fs-sm mb-lg-5">
                  <p class="text-success mb-1">
                      Critères validés
                              le
                      <span class="fw-bold">
                          19/05/2025
                      </span>
                      par
                      <strong>
                          Pierre DUPONT
                      </strong>
                      (Pres. Org.).
                  </p>
                  <ul class="list-data mb-3">
                      <li>
                          <small>
                              Critères administratifs
                          </small>
                          <ul>
                              <li>
                                  Bénéficiaire du RSA
                              </li>
                              <li>
                                  Allocataire AAH
                              </li>
                              <li>
                                  Problème de mobilité
                              </li>
                          </ul>
                      </li>
                  </ul>
                  <p class="mb-0">
                      <i>
                          Ce diagnostic expire le
              19/11/2025.
                      </i>
                  </p>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestDashboardView.test_staff_users[full]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="s-section__row row">
              <div class="col-12">
                  <div class="tab-content">
                      <div aria-labelledby="ensemble-tab" class="tab-pane fade show active" id="ensemble" role="tabpanel">
                          <h2>
                              Vue d’ensemble
                          </h2>
                          <div class="c-search mt-3 mt-md-4">
                              <div class="c-search__bar">
                                  <form action="/search/employers/results" method="get" role="search">
                                      <div class="c-search__bar__grid">
                                          <div class="input-group input-group-xl input-group-search flex-nowrap align-items-center">
                                              <label class="input-group-text mb-0" for="id_city">
                                                  <span class="visually-hidden">
                                                      Ville
                                                  </span>
                                                  <i aria-hidden="true" class="ri-map-pin-line fw-medium ri-xltext-disabled">
                                                  </i>
                                              </label>
                                              <select class="form-control django-select2" data-ajax--delay="250" data-ajax--url="/autocomplete/cities?slug=" data-allow-clear="false" data-minimum-input-length="1" data-placeholder="Rechercher un emploi inclusif autour de…" data-theme="bootstrap-5" id="id_city" lang="fr" name="city" required="">
                                              </select>
                                          </div>
                                          <div class="input-group input-group-xl">
                                              <button aria-label="Rechercher un emploi inclusif" class="btn btn-block btn-ico btn-link">
                                                  <i aria-hidden="true" class="ri-search-line ri-xl fw-bold">
                                                  </i>
                                                  <span class="me-1">
                                                      Rechercher
                                                  </span>
                                              </button>
                                          </div>
                                      </div>
                                  </form>
                              </div>
                          </div>
                          <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 row-cols-xxxl-4 mt-3 mt-md-4">
                              <div class="col mb-3 mb-md-4">
                                  <div class="c-box p-0 h-100">
                                      <div class="p-3 p-lg-4">
                                          <span class="h4 m-0">
                                              Admin
                                          </span>
                                      </div>
                                      <div class="px-3 px-lg-4">
                                          <p class="d-flex justify-content-between align-items-center mb-3 mb-lg-5">
                                              <a class="btn-link btn-ico" href="/admin/">
                                                  <i aria-hidden="true" class="ri-key-2-line ri-lg fw-normal">
                                                  </i>
                                                  <span>
                                                      Admin
                                                  </span>
                                              </a>
                                          </p>
                                      </div>
                                  </div>
                              </div>
                              <div class="col mb-3 mb-md-4">
                                  <div class="c-box p-0 h-100">
                                      <div class="p-3 p-lg-4">
                                          <span class="h4 m-0">
                                              Exports de données
                                          </span>
                                      </div>
                                      <div class="px-3 px-lg-4">
                                          <ul class="list-unstyled mb-lg-5">
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/staff/export-job-applications-unknown-to-ft">
                                                      <i aria-hidden="true" class="ri-key-2-line ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Candidatures inconnues de France Travail
                                                      </span>
                                                  </a>
                                              </li>
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/staff/export-ft-api-rejections">
                                                      <i aria-hidden="true" class="ri-download-line ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Rejets de l'API FranceTravail
                                                      </span>
                                                  </a>
                                              </li>
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/staff/export-cta">
                                                      <i aria-hidden="true" class="ri-download-line ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Export des prescripteurs et employeurs
                                                      </span>
                                                  </a>
                                              </li>
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/staff/export-fs-3437">
                                                      <i aria-hidden="true" class="ri-download-line ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Fiches salarié avec une erreur 3437 (IdItou)
                                                      </span>
                                                  </a>
                                              </li>
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a aria-label="Liste des utilisateurs institutionnels (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://stats.inclusion.beta.gouv.fr/question/7519-utilisateurs-institutionnels" rel="noopener" target="_blank">
                                                      <i aria-hidden="true" class="ri-list-check-3 ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Liste des utilisateurs institutionnels
                                                      </span>
                                                      <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2">
                                                      </i>
                                                  </a>
                                              </li>
                                          </ul>
                                      </div>
                                  </div>
                              </div>
                              <div class="col mb-3 mb-md-4">
                                  <div class="c-box p-0 h-100">
                                      <div class="p-3 p-lg-4">
                                          <span class="h4 m-0">
                                              Actions
                                          </span>
                                      </div>
                                      <div class="px-3 px-lg-4">
                                          <ul class="list-unstyled mb-lg-5">
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/staff/merge-users">
                                                      <i aria-hidden="true" class="ri-key-2-line ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Fusion de comptes
                                                      </span>
                                                  </a>
                                              </li>
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/staff/import-aci-convergence-phc">
                                                      <i aria-hidden="true" class="ri-upload-line ri-lg fw-normal">
                                                      </i>
                                                      <span>
                                                          Import ACI Convergence / PHC
                                                      </span>
                                                  </a>
                                              </li>
                                          </ul>
                                      </div>
                                  </div>
                              </div>
                              <div class="col mb-3 mb-md-4">
                                  <div class="c-box p-0 h-100">
                                      <div class="p-3 p-lg-4">
                                          <span class="h4 m-0">
                                              Statistiques
                                          </span>
                                      </div>
                                      <div class="px-3 px-lg-4">
                                          <ul class="list-unstyled mb-lg-5">
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/stats/staff/service_indicators">
                                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start">
                                                      </i>
                                                      <span>
                                                          Indicateurs à suivre
                                                      </span>
                                                  </a>
                                              </li>
                                          </ul>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: TestDashboardView.test_staff_users[partial]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="s-section__row row">
              <div class="col-12">
                  <div class="tab-content">
                      <div aria-labelledby="ensemble-tab" class="tab-pane fade show active" id="ensemble" role="tabpanel">
                          <h2>
                              Vue d’ensemble
                          </h2>
                          <div class="c-search mt-3 mt-md-4">
                              <div class="c-search__bar">
                                  <form action="/search/employers/results" method="get" role="search">
                                      <div class="c-search__bar__grid">
                                          <div class="input-group input-group-xl input-group-search flex-nowrap align-items-center">
                                              <label class="input-group-text mb-0" for="id_city">
                                                  <span class="visually-hidden">
                                                      Ville
                                                  </span>
                                                  <i aria-hidden="true" class="ri-map-pin-line fw-medium ri-xltext-disabled">
                                                  </i>
                                              </label>
                                              <select class="form-control django-select2" data-ajax--delay="250" data-ajax--url="/autocomplete/cities?slug=" data-allow-clear="false" data-minimum-input-length="1" data-placeholder="Rechercher un emploi inclusif autour de…" data-theme="bootstrap-5" id="id_city" lang="fr" name="city" required="">
                                              </select>
                                          </div>
                                          <div class="input-group input-group-xl">
                                              <button aria-label="Rechercher un emploi inclusif" class="btn btn-block btn-ico btn-link">
                                                  <i aria-hidden="true" class="ri-search-line ri-xl fw-bold">
                                                  </i>
                                                  <span class="me-1">
                                                      Rechercher
                                                  </span>
                                              </button>
                                          </div>
                                      </div>
                                  </form>
                              </div>
                          </div>
                          <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 row-cols-xxxl-4 mt-3 mt-md-4">
                              <div class="col mb-3 mb-md-4">
                                  <div class="c-box p-0 h-100">
                                      <div class="p-3 p-lg-4">
                                          <span class="h4 m-0">
                                              Admin
                                          </span>
                                      </div>
                                      <div class="px-3 px-lg-4">
                                          <p class="d-flex justify-content-between align-items-center mb-3 mb-lg-5">
                                              <a class="btn-link btn-ico" href="/admin/">
                                                  <i aria-hidden="true" class="ri-key-2-line ri-lg fw-normal">
                                                  </i>
                                                  <span>
                                                      Admin
                                                  </span>
                                              </a>
                                          </p>
                                      </div>
                                  </div>
                              </div>
                              <div class="col mb-3 mb-md-4">
                                  <div class="c-box p-0 h-100">
                                      <div class="p-3 p-lg-4">
                                          <span class="h4 m-0">
                                              Statistiques
                                          </span>
                                      </div>
                                      <div class="px-3 px-lg-4">
                                          <ul class="list-unstyled mb-lg-5">
                                              <li class="d-flex justify-content-between align-items-center mb-3">
                                                  <a class="btn-link btn-ico" href="/stats/staff/service_indicators">
                                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start">
                                                      </i>
                                                      <span>
                                                          Indicateurs à suivre
                                                      </span>
                                                  </a>
                                              </li>
                                          </ul>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
